--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,9 +24,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hall-allocation-system
-:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hall-allocation-system:latest .
 
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/hall-allocation-system
-:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/hall-allocation-system:latest
