--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,6 +20,7 @@ jobs:
           image: bupanie/hall-allocation-system
           tags: latest
           registry: docker.io
-          dockerfile: Dockerfile
+          dockerfile: ./Dockerfile
+          context: .
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
