--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,5 +1,19 @@
-FROM eclipse-temurin:21
-WORKDIR /app
-COPY target/hall-allocation-system.jar hall-allocation-system.jar
+# ---------- Stage 1: Build ----------
+FROM maven:3.9-eclipse-temurin-17 AS build
+
+WORKDIR /demo
+COPY . .
+
+# Build the application (generates target/*.jar)
+RUN mvn clean package -DskipTests
+
+# ---------- Stage 2: Run ----------
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /demo
+
+# Copy the jar from the builder image
+COPY --from=build /demo/target/*.jar app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "hall-allocation-system.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
