--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,36 +1,25 @@
-name: CI/CD Pipeline
+name: Build and Push Docker Image
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - name: Build & Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          java-version: '17'
-
-      - name: Build with Maven
-        run: mvn clean package
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
+          image: bupanie/hall-allocation-system            # change to your Docker Hub repo
+          tags: latest
+          registry: docker.io
+          dockerfile: ./demo/Dockerfile
+          context: ./demo                                      # root directory where pom.xml lives
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: bupanie/hall-allocation-system:latest
