--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,19 +1,13 @@
-# ---------- Stage 1: Build ----------
 FROM maven:3.9-eclipse-temurin-17 AS build
 
-WORKDIR /demo
-COPY . .
+WORKDIR /app
+COPY . .  # this copies the contents of demo/ into /app
 
-# Build the application (generates target/*.jar)
+RUN ls -la && cat pom.xml  # Debug: ensure pom.xml exists
 RUN mvn clean package -DskipTests
 
-# ---------- Stage 2: Run ----------
 FROM eclipse-temurin:17-jdk
-
-WORKDIR /demo
-
-# Copy the jar from the builder image
-COPY --from=build /demo/target/*.jar app.jar
-
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
