--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,12 +14,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build & Push Docker Image
+        working-directory: demo
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: bupanie/hall-allocation-system
           tags: latest
           registry: docker.io
-          dockerfile: ./demo/Dockerfile
-          context: ./demo
+          dockerfile: Dockerfile           
+          context: .                       
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
