--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,13 +1,4 @@
-FROM maven:3.9-eclipse-temurin-17 AS build
-
-WORKDIR /app
-COPY . .  # this copies the contents of demo/ into /app
-
-RUN ls -la && cat pom.xml  # Debug: ensure pom.xml exists
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:17-jdk
-WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+FROM openjdk:17-jdk-slim
+VOLUME /tmp
+COPY target/demo-0.0.1-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
