--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,4 +1,13 @@
-FROM openjdk:17-jdk-slim
-VOLUME /tmp
-COPY target/demo-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+# Use Maven to build the app
+FROM maven:3.9.3-eclipse-temurin-17 AS build
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Run the jar
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
